--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,58 @@
 @import "defaults";
 @import "mixins";
+@import url('https://fonts.googleapis.com/css2?family=Gluten:wght@900&display=swap');
+
+body {
+  background: linear-gradient(rgb(0, 0, 233), rgb(0, 0, 73));
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  box-shadow: 0 5px 3px rgba(0, 0, 0, .3);
+
+  // Logo
+  &__logo-container {
+    cursor: pointer;
+    display: none;
+    
+    &__logo {
+      font-size: 3.5rem;
+      font-family: "Gluten";
+      letter-spacing: .1rem;
+      color: crimson;
+      text-shadow: 1px 1px 0px #fff;
+    }
+  }
+
+  // Search Form
+  &__search-form {
+    
+    &__input {
+      outline: none;
+      font-size: 2rem;
+      padding: .5rem;
+      text-align: center;
+      border-radius: 1.5rem;
+      border: none;
+      background: rgba(255, 255, 255, .3);
+      color: #fff;
+      
+      &:focus {
+        background: rgba(255, 255, 255, .4);
+      }
+    }
+  }
+
+  @include mq(768px) {
+    justify-content: space-between;
+    margin: 0 2rem;
+    padding: 0 2rem;
+
+    &__logo-container {
+      display: block;
+    }
+  }
+}
