--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,8 +63,86 @@ body {
 
   &__movies-list {
     display: grid;
-    grid-template-columns: repeat (4 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+    grid-gap: 2rem;
     list-style: none;
     padding: 1rem;
+
+    &__movie {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      height: 50rem;
+      overflow: hidden;
+
+      &:hover &__overview {
+        transform: translateY(0);
+      }
+      
+      &__figure {
+        flex: 1;
+        width: 100%;
+        height: 90%;
+        
+        &__img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      
+      &__details {
+        position: relative;
+        z-index: 2;
+        display: flex;
+        flex-basis: 20%;
+        padding: 1rem;
+        background: rgba(255, 255, 255, 1);
+
+        &__title {
+          flex:1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 1.2rem;
+          text-align: center;
+        }
+
+        &__rating {
+          flex-basis: 20%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: .5rem;
+          font-size: 1.2rem;
+        }  
+      }
+
+      &__year {
+        font-family: "Gluten";
+        position: absolute;
+        top: 1%;
+        left: 99%;
+        transform: translate(-99%, -1%);
+        font-size: 3rem;
+        color: #fff;
+        text-shadow: 1px 1px 3px #000;
+      }
+      
+      &__overview {
+        position: absolute;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        bottom: 10%;
+        width: 100%;
+        background: rgba(255, 255, 255, .8);
+        padding: .5rem;
+        font-size: 1.8rem;
+        text-align: justify;
+        transform: translateY(100%);
+        transition: transform .3s ease-out;
+      }
+    }
   }
 }
