--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,8 +113,7 @@ body {
           display: flex;
           justify-content: center;
           align-items: center;
-          padding: .5rem;
-          font-size: 1.2rem;
+          font-size: 1.5rem;
         }  
       }
 
@@ -137,12 +136,21 @@ body {
         bottom: 10%;
         width: 100%;
         background: rgba(255, 255, 255, .8);
-        padding: .5rem;
+        padding: 1rem;
         font-size: 1.8rem;
         text-align: justify;
         transform: translateY(100%);
         transition: transform .3s ease-out;
       }
     }
+  }
+
+  &__arrows {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 5rem;
+    background: red;
+    padding: 1rem;
   }
 }
