Change renderArrows method to updateArrows in ui

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -145,12 +145,55 @@ body {
     }
   }
 
-  &__arrows {
+  // Arrows
+  &__arrows.active {
     display: flex;
+  }
+
+  &__arrows {
+    display: none;
     align-items: center;
     width: 100%;
+    color: #fff;
+    text-shadow: 1px 1px 3px #000;
     height: 5rem;
-    background: red;
+    background: rgba(255, 255, 255, .2);
     padding: 1rem;
+
+    &__left {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      background: transparent;
+
+      &__icon {
+        font-size: 3rem;
+        transform: translateY(-3px);
+        cursor: pointer;
+      }
+    }
+
+    &__page {
+      font-size: 2rem;
+      font-style: italic;
+      letter-spacing: .1rem;
+    }
+
+    &__right {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: none;
+      background: transparent;
+
+      &__icon {
+        font-size: 3rem;
+        transform: translateY(-3px);
+        cursor: pointer;
+      }
+    }
   }
 }
