Add searchMovie method in movies

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -173,6 +173,7 @@ body {
 
       &__icon {
         display: block;
+        color: #fff;
         font-size: 3rem;
         transform: translateY(-3px);
         cursor: pointer;
@@ -199,6 +200,7 @@ body {
 
       &__icon {
         display: block;
+        color: #fff;
         font-size: 3rem;
         transform: translateY(-3px);
         cursor: pointer;
